--- a/src/Views/Admin/AddArticle.cshtml
+++ b/src/Views/Admin/AddArticle.cshtml
@@ -69,32 +69,34 @@
                 @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
             </div>
         </div>
-        @for (int i = 0; i < Model.AdditionalFields.Count; i++)
+        @if (Model.AdditionalFields != null)
         {
-            @Html.HiddenFor(x => x.AdditionalFields[i].Title);
-            @Html.HiddenFor(x => x.AdditionalFields[i].Name);
-            @Html.HiddenFor(x => x.AdditionalFields[i].Categories);
-            @Html.HiddenFor(x => x.AdditionalFields[i].Type);
-            @Html.HiddenFor(x => x.AdditionalFields[i].DefaultValue);
-            <div class="additional-field form-group" data-categories="@Model.AdditionalFields[i].Categories" style="display:none;">
-                @Html.LabelFor(x => x.AdditionalFields[i].Value,Model.AdditionalFields[i].Title, htmlAttributes: new { @class = "col-md-2", style = "text-align:left;padding-top:7px;" })
-                @if (Model.AdditionalFields[i].Type == "textbox")
-                {
-                    <div class="col-md-3">
-                        @Html.TextBoxFor(x => x.AdditionalFields[i].Value, new { @class = "form-control" })
-                    </div>
-                }
-                else
-                {
-                    <div class="col-md-3">
-                        @Html.TextAreaFor(x => x.AdditionalFields[i].Value, new { @class = "form-control" })
-                    </div>
-                }
-            </div>
+
+            for (int i = 0; i < Model.AdditionalFields.Count; i++)
+            {
+                @Html.HiddenFor(x => x.AdditionalFields[i].Title);
+                @Html.HiddenFor(x => x.AdditionalFields[i].Name);
+                @Html.HiddenFor(x => x.AdditionalFields[i].Categories);
+                @Html.HiddenFor(x => x.AdditionalFields[i].Type);
+                @Html.HiddenFor(x => x.AdditionalFields[i].DefaultValue);
+                <div class="additional-field form-group" data-categories="@Model.AdditionalFields[i].Categories" style="display:none;">
+                    @Html.LabelFor(x => x.AdditionalFields[i].Value, Model.AdditionalFields[i].Title, htmlAttributes: new { @class = "col-md-2", style = "text-align:left;padding-top:7px;" })
+                    @if (Model.AdditionalFields[i].Type == "textbox")
+                    {
+                        <div class="col-md-3">
+                            @Html.TextBoxFor(x => x.AdditionalFields[i].Value, new { @class = "form-control" })
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="col-md-3">
+                            @Html.TextAreaFor(x => x.AdditionalFields[i].Value, new { @class = "form-control" })
+                        </div>
+                    }
+                </div>
+            }
+            <script>CategoryChanged();</script>
         }
-        <script>CategoryChanged();</script>
-
-
         <div class="form-group">
             @Html.LabelFor(model => model.Moderated, htmlAttributes: new { @class = "col-md-2 control-label", style = "text-align:left; padding-top:7px;" })
             <div class="col-md-3">
